résolution bug des fenetre trop grande plus footer et dark mode

--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -14,7 +14,6 @@
 .Element-contact{
     align-items: center;
     justify-content: center;
-    width: 100%;
     height: 10rem;
     display: flex;
     padding: 50px;
@@ -38,5 +37,5 @@
 
 .myFrame{
     height: 100%;
-    width: 100%;
+    width: 99.8%;
 }
