--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,10 +1,9 @@
 footer{
-    position:absolute;
     bottom:0;
     width:100%;
     margin-top:50px;
     background-color: black;
-    margin-top: 2rem;
+    margin-top: 7.5rem;
 }
 .siteFooter{
     color: white;
